Use pseudoelement to clear float (stop collapse)

--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,18 @@
+body {
+  margin: 10px;
+}
+
+.tweet {
+  border: 3px solid lightgray;
+}
+
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
 .avatar {
   width: 5rem;
   height: 5rem;
